--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 evn:
   - DJANGO=1.11
 install:
-  - pip install django --quiet
+  - sudo pip install django --quiet
 scripts:
   - pyhton manage.py test
