--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 evn:
   - DJANGO=1.10
 install:
-  - pip install django --quiet
+  - pip install django==$DJANGO --quiet --use-mirrors
 scripts:
   - pyhton manage.py test
